--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -1,9 +1,9 @@
 [Appearance]
-color_scheme_path=/usr/share/qt5ct/colors/airy.conf
-custom_palette=false
+color_scheme_path=/usr/share/qt5ct/colors/hefftorlinux.conf
+custom_palette=true
 icon_theme=Tela-blue-dark
-standard_dialogs=default
-style=gtk2
+standard_dialogs=gtk3
+style=Fusion
 
 [Fonts]
 fixed=@Variant(\0\0\0@\0\0\0\x1c\0N\0o\0t\0o\0 \0S\0\x61\0n\0s\0 \0M\0o\0n\0o@&\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
@@ -24,5 +24,8 @@ toolbutton_style=4
 underline_shortcut=1
 wheel_scroll_lines=1
 
+[PaletteEditor]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x80\0\0\x1\xf\0\0\x4\xfe\0\0\x3'\0\0\x2\x84\0\0\x1\x13\0\0\x4\xfa\0\0\x3#\0\0\0\0\0\0\0\0\a\x80\0\0\x2\x84\0\0\x1\x13\0\0\x4\xfa\0\0\x3#)
+
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\n\0\0\0\x32\0\0\au\0\0\x4-\0\0\0\xf\0\0\0\x37\0\0\ap\0\0\x4(\0\0\0\0\0\0\0\0\a\x80\0\0\0\xf\0\0\0\x37\0\0\ap\0\0\x4()
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\xeb\0\0\x2/\0\0\x3\xbb\0\0\x4%\0\0\x1\xef\0\0\x2\x33\0\0\x3\xb7\0\0\x4!\0\0\0\0\0\0\0\0\a\x80\0\0\x1\xef\0\0\x2\x33\0\0\x3\xb7\0\0\x4!)
